--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/MobileServices.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/MobileServices.xaml
@@ -36,7 +36,10 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <Label Content="Select your Mobile Service Provider" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Button Background="Transparent"  Margin="0,0" Click="Home_Click" Width="80" HorizontalAlignment="Left">
+            <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource screenLogoImage}"/>
+            </Button>
+            <Label Content="       Select your Mobile Service Provider" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Viewbox HorizontalAlignment="Right" VerticalAlignment="Center">
                 <Image x:Name="companyLogo" Source="/Resources/Images/icici.png" Margin="0,0,20,0"/>
             </Viewbox>
@@ -44,8 +47,7 @@
 
         <Grid x:Name="servicesImages" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
             <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
-                <WrapPanel   HorizontalAlignment="Center" Width="700">
-
+                <WrapPanel   HorizontalAlignment="Center" Width="600">
                     <Controls:TransitioningContentControl x:Name="MobileServiceProvider_1_1"
                                                   Transition="Up"  >
                     </Controls:TransitioningContentControl>
@@ -73,18 +75,7 @@
                     <Controls:TransitioningContentControl x:Name="MobileServiceProvider_3_2"
                                                   Transition="Up">
                     </Controls:TransitioningContentControl>
-                    <Controls:TransitioningContentControl x:Name="MobileServiceProvider_4_1"
-                                                  Transition="Up">
-                    </Controls:TransitioningContentControl>
-                    <Controls:TransitioningContentControl x:Name="MobileServiceProvider_4_2"
-                                                  Transition="Up">
-                    </Controls:TransitioningContentControl>
-                    <Controls:TransitioningContentControl x:Name="MobileServiceProvider_4_3"
-                                                  Transition="Up">
-                    </Controls:TransitioningContentControl>
-                    <Controls:TransitioningContentControl x:Name="MobileServiceProvider_4_4"
-                                                  Transition="Up">
-                    </Controls:TransitioningContentControl>
+                  
                 </WrapPanel>
             </ScrollViewer>
         </Grid>
