--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/TransactionHome.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/TransactionHome.xaml
@@ -46,13 +46,17 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <Label Content="Select your Transaction" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Button Background="Transparent"  Margin="0,0" Click="Home_Click" Width="80" HorizontalAlignment="Left">
+                <Image Source="/Resources/Images/Exit-03.png" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource screenLogoImage}"/>
+            </Button>
+            <Label Content="        Select your Transaction" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+              
             <Viewbox HorizontalAlignment="Right" VerticalAlignment="Center">
                 <Image x:Name="companyLogo" Source="/Resources/Images/icici.png" Margin="0,0,20,0"/>
             </Viewbox>
         </Grid>
-        <Image Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Source="/Resources/Images/icici.png" Margin="20,0,0,0"/>
-        <ListBox Margin="50" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Column="0" Grid.Row="2"  Style="{StaticResource contentListBox}" >
+        <Image Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Source="/Resources/Images/icici.png" Margin="20,0,0,0" x:Name="imgProvider"/>
+        <ListBox Margin="50" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"  Style="{StaticResource contentListBox}" >
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Vertical"  Background="Transparent" ></StackPanel>
@@ -68,22 +72,9 @@
                 <Button  Style="{StaticResource LargeMetroButton}"  Command="{Binding ButtonCommand}" CommandParameter="Recharge">Recharge Pre-paid Mobile</Button>
             </ListBoxItem>
             <ListBoxItem>
-                <Button Style="{StaticResource MetroButton}">Pay Post Paid Bill</Button>
+                <Button Style="{StaticResource LargeMetroButtonWidth}">Pay Post Paid Bill</Button>
             </ListBoxItem>
         </ListBox>
-        <Grid x:Name="rightStaticText" Grid.Row="2" Grid.Column="1">
-            <Border Style="{StaticResource contentBoxBorder}" Margin="5,5,5,20">
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="5">
-                    <TextBlock TextWrapping="Wrap" Style="{StaticResource contentBoxText}">
-                Any important Notes
-                    <LineBreak/>
-                    <LineBreak/>
-                 For any help or support needed to use this KIOSK, Please call us on 1-800-CITIZEN-KOISK
-                    <LineBreak/>
-                    </TextBlock>
-                </ScrollViewer>
-            </Border>
-        </Grid>
-
+      
     </Grid>
 </Controls:MetroWindow>
