--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
@@ -21,7 +21,24 @@
         <Setter Property="Height" Value="50"/>
         <Setter Property="Margin" Value="10,0,0,0" />
     </Style>
+    <Style x:Key="ElectricityRegionsTile" TargetType="Controls:Tile">
+        <Setter Property="Width" Value="250" />
+        <Setter Property="Height" Value="150" />
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Background" Value="DarkBlue"/>
+    </Style>
 
+    <Style x:Key="ElectricityRegionTileTitle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+    </Style>
+
+    <Style x:Key="ElectricityRegionTileCode" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="10"/>
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="Margin" Value="0,50,0,0"/>
+    </Style>
     <Style x:Key="LargeTileStyle" TargetType="Controls:Tile">
         <Setter Property="Width" Value="300" />
         <Setter Property="Height" Value="125" />
