hooked up the electrcity page with VM

--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/ElectricityHome.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/ElectricityHome.xaml
@@ -19,9 +19,9 @@
         xmlns:viewModels="clr-namespace:DoyenBiz.CitizenKiosk.ViewModels"
         xmlns:Views="clr-namespace:DoyenBiz.CitizenKiosk.Views"
         IgnoreTaskbarOnMaximize="True">
-    <!--<Window.DataContext>
-        <viewModels:MainViewModel/>
-    </Window.DataContext>-->
+    <Window.DataContext>
+        <viewModels:ElectricityHomeViewModel/>
+    </Window.DataContext>
     <Controls:MetroWindow.Background>
         <ImageBrush ImageSource="/Resources/Images/ScreenBackground.jpg"/>
     </Controls:MetroWindow.Background>
