--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Common/Styles.xaml
@@ -456,4 +456,87 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style TargetType="{x:Type Controls:MetroTabItem}"
+           BasedOn="{StaticResource MetroTabItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Controls:MetroTabItem}">
+                    <Border x:Name="Border"
+                            HorizontalAlignment="Stretch"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Background="{TemplateBinding Background}"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                        <StackPanel Orientation="Vertical"
+                                    HorizontalAlignment="Stretch">
+                            <StackPanel Orientation="Horizontal">
+                                <ContentPresenter x:Name="ContentSite"
+                                                  Margin="2,1,2,1"
+                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                  TextElement.FontSize="{TemplateBinding Controls:ControlsHelper.HeaderFontSize}"
+                                                  TextElement.FontStretch="{TemplateBinding Controls:ControlsHelper.HeaderFontStretch}"
+                                                  TextElement.FontWeight="{TemplateBinding Controls:ControlsHelper.HeaderFontWeight}"
+                                                  TextElement.Foreground="{TemplateBinding Foreground}"
+                                                  ContentSource="Header"
+                                                  RecognizesAccessKey="True" />
+                            </StackPanel>
+                            <Rectangle x:Name="Underline"
+                                       Margin="0, 1, 0, 0"
+                                       Height="2"
+                                       HorizontalAlignment="Stretch"
+                                       Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TabControl}}, 
+                                           Path=(Controls:TabControlHelper.IsUnderlined), Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelected"
+                                 Value="true">
+                            <Setter Property="TextElement.Foreground"
+                                    TargetName="ContentSite"
+                                    Value="DarkBlue" />
+                            <Setter Property="Fill"
+                                    TargetName="Underline"
+                                    Value="DarkBlue" />
+                        </Trigger>
+                        <Trigger Property="IsSelected"
+                                 Value="false">
+                            <Setter Property="TextElement.Foreground"
+                                    TargetName="ContentSite"
+                                    Value="AliceBlue" />
+                            <Setter Property="Fill"
+                                    TargetName="Underline"
+                                    Value="AliceBlue" />
+                        </Trigger>
+                        <Trigger SourceName="ContentSite"
+                                 Property="IsMouseOver"
+                                 Value="True">
+                            <Setter Property="TextElement.Foreground"
+                                    TargetName="ContentSite"
+                                    Value="{DynamicResource GrayHoverBrush}" />
+                            <Setter Property="Fill"
+                                    TargetName="Underline"
+                                    Value="{DynamicResource GrayHoverBrush}" />
+                        </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver"
+                                           SourceName="ContentSite"
+                                           Value="True" />
+                                <Condition Property="IsSelected"
+                                           Value="True" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="TextElement.Foreground"
+                                    TargetName="ContentSite"
+                                    Value="{DynamicResource HighlightBrush}" />
+                            <Setter Property="Fill"
+                                    TargetName="Underline"
+                                    Value="{DynamicResource HighlightBrush}" />
+                        </MultiTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
