--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/ElectricityServiceFlyout.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/ElectricityServiceFlyout.xaml
@@ -35,23 +35,28 @@
                     <RowDefinition Height=".1*"/>
                     <RowDefinition Height=".5*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" VerticalAlignment="Top">Enter your Service Number</TextBlock>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".50*"/>
+                    <ColumnDefinition Width=".50*"/>
+                </Grid.ColumnDefinitions>
+                <Image Grid.Column="1" Grid.Row="0" Margin="30,0,0,0" Source="/Resources/Images/APEPDCL_Electricity_Bill.png" Grid.RowSpan="6" />
+                <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" VerticalAlignment="Top">Enter your Service Number</TextBlock>
                     <TextBox x:Name="inputServiceNumber" Width="400" Height="50" TextAlignment="Right" Grid.Row="1" 
                              VerticalContentAlignment="Top" 
                              MaxLength="10" FontSize="30" GotFocus="inputServiceNumber_GotFocus"
                              />
-                <TextBlock Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" VerticalAlignment="Top" Margin="0,20,0,0">Enter your Mobile Number</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" VerticalAlignment="Top" Margin="0,20,0,0">Enter your Mobile Number</TextBlock>
                 <TextBox x:Name="inputMobileBox" Width="400" Height="50" TextAlignment="Right" Grid.Row="3" 
                              VerticalContentAlignment="Top" 
                              MaxLength="10" FontSize="30" GotFocus="inputMobileBox_GotFocus"
                              />
 
-                <Button x:Name="validatePINButton" Width="200" Height="50"
+                <Button Grid.Column="0" x:Name="validatePINButton" Width="200" Height="50"
                         BorderThickness="2"   Grid.Row="4" Margin="0,20,0,0"
                         Style="{StaticResource MetroButton}"
                         Content="Review and Pay Bill"
                         VerticalAlignment="Top"  Command="{Binding ButtonCommand}"/>
-                <Grid Grid.Row="5" VerticalAlignment="Top" Margin="0,50,0,0">
+                <Grid Grid.Column="0" Grid.Row="5" VerticalAlignment="Top" Margin="0,50,0,0">
                     <StackPanel Width="400" Height="500" HorizontalAlignment="Center" VerticalAlignment="Top" >
                         <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
                             <WrapPanel>
