--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/ElectricityServiceFlyout.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/ElectricityServiceFlyout.xaml
@@ -43,7 +43,7 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" VerticalAlignment="Top">Enter your Service Number</TextBlock>
                     <TextBox x:Name="inputServiceNumber" Width="400" Height="50" TextAlignment="Right" Grid.Row="1" 
                              VerticalContentAlignment="Top" 
-                             MaxLength="10" FontSize="30" GotFocus="inputServiceNumber_GotFocus"
+                             FontSize="30" GotFocus="inputServiceNumber_GotFocus"
                              />
                 <TextBlock Grid.Column="0" Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" VerticalAlignment="Top" Margin="0,20,0,0">Enter your Mobile Number</TextBlock>
                 <TextBox x:Name="inputMobileBox" Width="400" Height="50" TextAlignment="Right" Grid.Row="3" 
