--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/PayCash.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/Views/PayCash.xaml
@@ -33,13 +33,17 @@
                     <RowDefinition Height=".3*"/>
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please deposit exact cash into the Cash Deposit Box</TextBlock>
-                <DataGrid AutoGenerateColumns="True" x:Name="dgDetails" Grid.Row="1" Width="300" Height="150" VerticalAlignment="Top"/>
-                <Button x:Name="btnAmount" Width="100" Height="50"
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".8*"/>
+                    <ColumnDefinition Width=".2*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please deposit exact cash into the Cash Deposit Box</TextBlock>
+                <Button Grid.Row="0" Grid.Column="1" x:Name="btnAmount" Width="100" Height="50"
                         BorderThickness="2" 
                         Style="{StaticResource MetroButton}"
-                        Margin="600,0,0,0" Content="Go"
+                        Margin="10" Content="Go"
                         VerticalAlignment="Center"  />
+                <DataGrid AutoGenerateColumns="True" x:Name="dgDetails" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Width="300" Height="150" VerticalAlignment="Top"/>
             </Grid>
         </Grid>
     </Grid>
